--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,3 +1,3 @@
 @theme inline {
-    --font-sans: ui-sans-serif, system-ui, sans-serif;
+    --font-sans: 'roboto', ui-sans-serif, system-ui, sans-serif;
 }
