--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,5 @@
 @import 'tailwindcss';
-
-@plugin 'daisyui' {
-    themes: lofi --default, business --prefersdark, retro, aqua, coffee;
-}
+@import './theme.css';
 
 @font-face {
     font-family: 'roboto';
@@ -31,5 +28,15 @@
 
     svg {
         stroke-width: 1.5px; /* Default stroke width */
+    }
+
+    .chess {
+        background:
+            repeating-conic-gradient(
+                    var(--color-alpha-100) 0 90deg,
+                    var(--color-alpha-200) 0 180deg)
+            0 0/25% 25%;
+        margin: 15px;
+        padding:10px;
     }
 }
