--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,8 +35,8 @@
             repeating-conic-gradient(
                     var(--color-alpha-100) 0 90deg,
                     var(--color-alpha-200) 0 180deg)
-            0 0/25% 25%;
-        margin: 15px;
-        padding:10px;
+            0 0/10px 10px round;
+        margin: 0px;
+        padding:0px;
     }
 }
